@@ -6,6 +6,7 @@ cm4all-beng-proxy (0.5.15) unstable; urgency=low
   * handler: removed session redirect on the first request
   * http-cache: accept ETag response header instead of Last-Modified
   * filter-cache: don't require Last-Modified or Expires
+  * file-handler: disable ETag only when processor comes first
 
  --
 
